<resources>
    <string name="app_name">BaseTools</string>
    <string name="search_hint">Search by case name or modules</string>
    <string name="list_is_empty">List is empty</string>
    <string name="add_something">Add something</string>
    <string name="action">Action</string>
    <string name="title">Title</string>
    <string name="text_style">Text style</string>
    <string name="info">Info</string>
    <string name="create">Create</string>
    <string name="create_default">Create default</string>
    <string name="click">Click</string>
    <string name="send">Send</string>
    <string name="check">Check</string>
    <string name="value">Value</string>
    <string name="value_text">Value text</string>
    <string name="size">Size</string>
    <string name="image">Image</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="width">Width</string>
    <string name="color">Color</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="amount">Amount</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="message">Message</string>
    <string name="modules">Modules:</string>
    <string name="menu">Menu</string>
    <string name="ok">OK</string>
    <string name="result">Result</string>
    <string name="cancel">Cancel</string>
    <string name="test">Test</string>
    <string name="filter_modules">Modules</string>
    <string name="error_ok">OK</string>
    <string name="error_unknown_happened">Error occurred. Please, try again later or contact technical support.</string>
    <string name="error_server_error">Error on server occurred. Please, try again later or contact technical support.</string>
    <string name="error_access_denied">Access denied. Please, restore access or log in again.</string>
    <string name="error_invalid_refresh">Refresh token is expired or invalid. Please use password to continue</string>
    <string name="error_unauthenticated">User is unauthenticated. Please, log in.</string>
    <string name="error_net_ssl_handshake">Connection failed due to SSL Handshake error. Please, connect our technical support.</string>
    <string name="error_net_unknown_host">Connection failed due to unknown host exception. Please, connect our technical support.</string>
    <string name="error_net_timeout">Timeout exception. Check your network connection and try again.</string>
    <string name="error_net_no_connection">No connection. Check your network connection and try again later.</string>
    <string name="error_net_server_unavailable">Server is unavailable. Try again later.</string>
    <string name="error_app_unpredicted">Application inner error occurred. Please, try  again. If problem still occurs, contact our support.</string>
    <string name="error_app_secret_check_failed">Access check failed</string>
    <string name="error_app_no_access_token">Request was not authorized. Retry or connect our technical support.</string>
    <string name="error_app_context_parameters_empty">Parameters was not set completely. Retry or connect our technical support.</string>
    <string name="error_app_user_has_no_secrets">User has no additional authorization types.</string>
    <string name="error_app_not_equal">PIN-code does no match</string>
    <string name="error_decryption">Decryption failed, try to enter manually</string>
    <string name="error_decryption_pin">Failed PIN decryption (wrong PIN)</string>
    <string name="error_decryption_biom">Failed biometric decryption</string>
    <string name="error_decryption_secret_key">Decryption failed, try to enter manually</string>
    <string name="error_decryption_private_key">Decryption failed, try to enter manually</string>
    <string name="error_api_password_recovery_failed">Password recovery failed. Please, check inserted info and try again.</string>
    <string name="error_api_activation_failed">Activation failed. Please, check inserted info and try again.</string>
    <string name="error_api_user_locked_out">User was locked out due to exceeding the limit of authorization attempts. Wait few minutes and then try again.</string>
    <string name="error_api_already_activated">User already activated</string>
    <string name="error_api_reactivate_error">Reactivation error. Try again later. If problem still occurs, contact our support.</string>
    <string name="error_api_register_error">Registration error. Try again and if problem still occurs, contact our support.</string>
    <string name="error_api_phone_taken">Phone you are trying to set is already taken.</string>
    <string name="error_api_email_not_confirmed">Email is not confirmed. Confirm your email.</string>
    <string name="error_api_email_taken">Email you are trying to set is already taken.</string>
    <string name="error_api_email_invalid">Email is invalid.</string>
    <string name="error_api_user_name_taken">User name you are trying to set is already taken.</string>
    <string name="error_api_user_name_invalid">User name is invalid.</string>
    <string name="error_api_incorrect_password_format">Password format is incorrect. Please enter another password</string>
    <string name="error_api_add_email_error">Email was not added. Please, try again.</string>
    <string name="error_api_verify_email_error">Email verify was not successful. Please, try again.</string>
    <string name="error_api_delete_email_error">Email was not deleted. Please, try again.</string>
    <string name="error_api_email_already_set">Email is already set.</string>
    <string name="error_api_add_phone_error">Phone was not added. Please, try again.</string>
    <string name="error_api_verify_phone_error">Phone verify was not successful. Please, try again.</string>
    <string name="error_api_delete_phone_error">Phone was not deleted. Please, try again.</string>
    <string name="error_api_phone_not_confirmed">Phone is not confirmed. Confirm your phone.</string>
    <string name="error_api_phone_already_set">Phone is already set.</string>
    <string name="error_api_request">Invalid request. Try again later.</string>
    <string name="error_api_wrong_password">Wrong password</string>
    <string name="error_api_user_exists">User already exists</string>
    <string name="cardline_case_1">Case 1. Cardline with icons, cardValueAlignment inherit, two dividers, all paddings and default title width percent</string>
    <string name="cardline_case_2">Case 2. Cardline with end icon, cardValueAlignment center, two dividers, text style and title width percent 0.1</string>
    <string name="cardline_case_3">Case 3. Cardline value without title, icons, top divider and with long text, cardValueAlignment textEnd</string>
    <string name="cardline_case_4">Case 4. Just title with long text, no dividers</string>
    <string name="cardline_case_5">Case 5. Cardline value with fixed height, dividers and all parts have different vertical bias. You can use button below to change cardline style</string>
    <string name="cardline_title">title</string>
    <string name="cardline_title_long">loooooooooooooooooooooooong title</string>
    <string name="cardline_value">Card with text</string>
    <string name="cardline_value_long">Card with loooooooooooooooooooooooooooooooooong text</string>
    <string name="cardline_change_style">Change Cardline style</string>
    <string name="hint_add_value">Add value</string>
    <string name="baseui_navigation_title">Go to another fragment using two buttons. With first button you can navigate without args, with second button navigate and pass entered in field data. \nTo go back to menu use system back button or button on app top bar.</string>
    <string name="baseui_navigation_without_args">Go to second fragment without args</string>
    <string name="baseui_navigation_with_args">Go to second fragment with args</string>
    <string name="baseui_navigation_second_args_data">Received data, if data was sent here:</string>
    <string name="baseui_navigation_second_pass_data">Use field below to pass data with pop back</string>
    <string name="baseui_navigation_second_pop_back_without_args">To go back to previous screen without args use button below, navigation icon on app top bar or system back button.</string>
    <string name="baseui_navigation_second_pop_back_without_args_button">Pop back without args</string>
    <string name="baseui_navigation_second_pop_back_with_args">To go back to previous screen with args use button below and add data to input field above. Then you will see entered data on previous screen on Toast.</string>
    <string name="baseui_navigation_second_pop_back_with_args_button">Pop back with args</string>
    <string name="baseui_navigation_second_pop_back_including">To back to the previous screen and pop back from it too use button below(in this case you will go to Menu).</string>
    <string name="baseui_navigation_second_pop_back_including_button">Pop back including previous fragment</string>
    <string name="baseui_functionality_title">On this screen you can check different functional of BaseUI module.</string>
    <string name="baseui_functionality_switcher">Enable/disable views on the screen</string>
    <string name="baseui_functionality_open_message_dialog">Use this button to open message dialog from fragment or view model</string>
    <string name="baseui_functionality_show_dialog">Show dialog</string>
    <string name="baseui_functionality_input_field">Start adding data in input field to make field focusable, than tap somewhere outside the field. Field becomes unfocusable and keyboard will be hidden</string>
    <string name="baseui_functionality_check_permissions_title">Use buttons below to check and request permissions to read/write external storage.</string>
    <string name="baseui_functionality_check_permission">Check permission</string>
    <string name="baseui_functionality_request_permission">Request permission</string>
    <string name="baseui_functionality_request_group_of_permissions_title">Use this button to request a group of permissions.</string>
    <string name="baseui_functionality_request_group_of_permission">Request group of permission</string>
    <string name="baseui_functionality_remove_permissions_title">*After confirming permissions, you can remove them in the application settings.</string>
    <string name="baseui_functionality_vm_handle_error_title">Use buttons below to check how viewModel handle error with different types of showing errors.</string>
    <string name="baseui_functionality_handle_error_type_dialog">Error type Dialog</string>
    <string name="baseui_functionality_handle_error_type_message">Error type Message</string>
    <string name="baseui_functionality_handle_error_type_nothing">Error type Nothing</string>
    <string name="baseui_functionality_fragment_handle_error_title">Use buttons below to check how fragment handle error with different types of showing errors.</string>
    <string name="baseui_theme_change_language">Change language</string>
    <string name="baseui_theme_english">English</string>
    <string name="baseui_theme_russian">Russian</string>
    <string name="baseui_theme_set_language">Set Language</string>
    <string name="baseui_theme_case_title">Use this case to change app language and theme. New settings won\'t be saved after app closing. Language by default is English and theme is system.</string>
    <string name="baseui_theme_change_theme">Change theme</string>
    <string name="baseui_theme_system">System</string>
    <string name="baseui_theme_light">Light</string>
    <string name="baseui_theme_night">Dark</string>
    <string name="baseui_theme_set_theme">Set Theme</string>
</resources>