<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_12">

        <com.google.android.material.textview.MaterialTextView
            style="@style/BaseUI_MinorTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseui_theme_case_title" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/BaseUI_TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_12"
            android:text="@string/baseui_theme_change_language" />

        <RadioGroup
            android:id="@+id/f_baseui_theme_lang_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4">

            <RadioButton
                android:id="@+id/f_baseui_theme_lang_radio_english"
                style="@style/BaseUI_TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baseui_theme_english"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/f_baseui_theme_lang_radio_russian"
                style="@style/BaseUI_TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baseui_theme_russian" />
        </RadioGroup>

        <Button
            android:id="@+id/f_baseui_theme_set_lang_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/baseui_theme_set_language" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/BaseUI_TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_12"
            android:text="@string/baseui_theme_change_theme" />

        <RadioGroup
            android:id="@+id/f_baseui_theme_mode_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4">

            <RadioButton
                android:id="@+id/f_baseui_theme_mode_radio_system"
                style="@style/BaseUI_TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baseui_theme_system"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/f_baseui_theme_mode_radio_light"
                style="@style/BaseUI_TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baseui_theme_light" />

            <RadioButton
                android:id="@+id/f_baseui_theme_mode_radio_night"
                style="@style/BaseUI_TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baseui_theme_night" />
        </RadioGroup>

        <Button
            android:id="@+id/f_baseui_theme_set_mode_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/baseui_theme_set_theme" />

    </LinearLayout>

</layout>