<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_12">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseui_navigation_second_args_data"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/f_baseui_navigation_second_args"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_4"
            android:textStyle="bold"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseui_navigation_second_pass_data"
            android:layout_marginTop="@dimen/spacing_4"/>

        <by.esas.tools.inputfieldview.InputFieldView
            android:id="@+id/f_baseui_navigation_second_input_field"
            style="@style/FieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_4"
            android:hint="@string/hint_add_value"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/HintTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseui_navigation_second_pop_back_without_args"/>

        <Button
            android:id="@+id/f_baseui_navigation_second_pop_back"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseui_navigation_second_pop_back_without_args_button"
            android:layout_marginTop="@dimen/spacing_10"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/HintTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseui_navigation_second_pop_back_with_args"
            android:layout_marginTop="@dimen/spacing_10"/>

        <Button
            android:id="@+id/f_baseui_navigation_second_pop_back_with_args"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseui_navigation_second_pop_back_with_args_button"
            android:layout_marginTop="@dimen/spacing_10"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/HintTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseui_navigation_second_pop_back_including"
            android:layout_marginTop="@dimen/spacing_10"/>

        <Button
            android:id="@+id/f_baseui_navigation_second_pop_back_inclusive"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseui_navigation_second_pop_back_including_button"
            android:layout_marginTop="@dimen/spacing_10"/>

    </LinearLayout>
</layout>